src/objects/c2g__DataViewField__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__Aggregatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CommonName__c</fullName>
        <label>Common Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>Budget and Balance</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Currency</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Number</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Credit Note Account</fullName>
                </value>
                <value>
                    <fullName>Credit Note Currency</fullName>
                </value>
                <value>
                    <fullName>Credit Note Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Credit Note Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Credit Note Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Credit Note Dimension 4</fullName>
                </value>
                <value>
                    <fullName>Credit Note Number</fullName>
                </value>
                <value>
                    <fullName>Credit Note Opportunity</fullName>
                </value>
                <value>
                    <fullName>Credit Note Period</fullName>
                </value>
                <value>
                    <fullName>Credit Note Tax Code 1</fullName>
                </value>
                <value>
                    <fullName>Credit Note Tax Code 2</fullName>
                </value>
                <value>
                    <fullName>Credit Note Tax Code 3</fullName>
                </value>
                <value>
                    <fullName>Credit Note Total</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Dimension 4</fullName>
                </value>
                <value>
                    <fullName>Document Currency</fullName>
                </value>
                <value>
                    <fullName>Document Due Date</fullName>
                </value>
                <value>
                    <fullName>Document Number</fullName>
                </value>
                <value>
                    <fullName>Dual Currency</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DataViewJoin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataView Join</label>
        <referenceTo>c2g__DataViewJoin__c</referenceTo>
        <relationshipLabel>DataView Fields</relationshipLabel>
        <relationshipName>DataViewFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DataView__c</fullName>
        <label>DataView</label>
        <referenceTo>c2g__DataView__c</referenceTo>
        <relationshipLabel>DataView Fields</relationshipLabel>
        <relationshipName>DataViewFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__KeyPriority__c</fullName>
        <label>Key</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectField__c</fullName>
        <label>Object Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Presentable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Reversible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Selectable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selectable</label>
        <type>Checkbox</type>
    </fields>
    <label>zDeprecated:Dataview Fields</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>